# historical

./: ChangeLog  HACKING  INSTALL.quagga.txt  Makefile.am  configure.ac  mkinstalldirs
bgpd/: ChangeLog  IMPLEMENTATION.txt  bgp_aspath.c  bgp_attr.c  bgp_btoa.c  bgp_debug.c  bgp_dump.c  bgp_fsm.c  bgp_main.c  bgp_memory.c  bgp_network.c  bgp_network.h  bgp_nexthop.c  bgp_nexthop.h  bgp_open.c  bgp_open.h  bgp_packet.c  bgp_route.c  bgp_route.h  bgp_routemap.c  bgp_snmp.c  bgp_vty.c  bgp_zebra.c  bgp_zebra.h  bgpd.c  bgpd.conf.sample  bgpd.h
isisd/: Makefile.am  dict.c  dict.h  isis_adjacency.c  isis_adjacency.h  isis_circuit.c  isis_circuit.h  isis_constants.h  isis_events.c  isis_events.h  isis_lsp.c  isis_lsp.h  isis_main.c  isis_network.c  isis_network.h  isis_pdu.c  isis_redistribute.c  isis_redistribute.h  isis_route.c  isis_route.h  isis_routemap.c  isis_routemap.h  isis_spf.c  isis_tlv.c  isis_tlv.h  isis_zebra.c  isisd.c  isisd.h
lib/: ChangeLog  if.c  (+35 more)
ospf6d/: Makefile.am  WOSPF-OR.txt  ospf6_abr.c  ospf6_abr.h  ospf6_area.c  ospf6_area.h  ospf6_asbr.c  ospf6_asbr.h  ospf6_debug.c  ospf6_debug.h  ospf6_flood.c  ospf6_flood.h  ospf6_interface.c  ospf6_interface.h  ospf6_intra.c  ospf6_intra.h  ospf6_lsa.c  ospf6_lsa.h  ospf6_lsdb.c  ospf6_lsdb.h  ospf6_main.c  ospf6_mdr.c  ospf6_mdr.h  ospf6_memory.c  ospf6_message.c  ospf6_message.h  ospf6_mpr.c  ospf6_mpr.h  ospf6_neighbor.c  ospf6_neighbor.h  ospf6_network.c  ospf6_network.h  ospf6_proto.c  ospf6_proto.h  ospf6_route.c  ospf6_route.h  ospf6_sim_printing.c  ospf6_sim_printing.h  ospf6_snmp.c  ospf6_snmp.h  (+34 more)
(+97 files in other folders)
